# wallet-rs-cpp

./: Cargo.toml  build.rs
cpp_ffi/: CRustSliceu8.h  LockedWallet.hpp  LockedWallet_fwd.hpp  UnlockedWallet.hpp  UnlockedWallet_fwd.hpp  c_LockedWallet.h  c_UnlockedWallet.h  rust_foreign_slice_impl.hpp  rust_foreign_vec_impl.hpp  rust_result4232mut3232c_voidCRustString.h  rust_slice.h  rust_slice_mut.h  rust_slice_tmpl.hpp  rust_str.h  rust_vec.h  rust_vec_impl.hpp
src/: cpp_glue.rs  cpp_glue.rs.in  lib.rs
