[package]
name = "wallet-rs-cpp"
version = "0.1.0"
authors = ["Ivan Temchenko <35359595i@gmail.com>"]
edition = "2018"

[lib]
name = "wallet_rs_cpp"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
universal_wallet = "0.4"

[build-dependencies]
flapigen = "0.6.0-pre7"

